# stocktest

./: README.md  pyproject.toml  テクニカル分析練習.ipynb
