[project]
name = "kabu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "setuptools",
    "ta-lib>=0.6.7",
    "yfinance",
    "pandas_datareader",
    "mplfinance",
    "vectorbt",
    "jupyter",
    "anywidget",
    "xlrd"
]
